pagina de pergunta frequente
preenchimento de questões e layout.

--- a/estilo.css
+++ b/estilo.css
@@ -28,6 +28,22 @@
     background-color: #FB8500;
 }
 
+.textoLaranja{
+
+    color: #FB8500;
+}
+.textoNeutroCinza{
+
+    color: #555;
+}
+
+.textoMarinho{
+
+    color: #023047;
+}
+
+
+
 
 
 /* ID Azul clarissimo*/
