--- a/estilo.css
+++ b/estilo.css
@@ -130,9 +130,70 @@ color: black;
   padding-left: 0;
   margin-right: auto;
   margin-left: auto;
-} /* Com isso, totalmente responsivo, adaptado e com padding zerado! */
+} /* Com isso, carousel totalmente responsivo, adaptado e com padding zerado! */
 
 #btn-Marinho {
     background-color: #023047;
 } /* Botões "azulMarinho" */
 
+/* Cards da página planosDeAula */
+#card-container {
+    --bs-gutter-x: 0;
+    --bs-gutter-y: 0;
+    width: 100%;
+    padding-right: 10px;
+    padding-left: 10px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    margin-right: auto;
+    margin-left: auto;
+}
+.card {
+    --bs-card-spacer-y: .25rem;
+    --bs-card-spacer-x: .25rem;
+    --bs-card-title-spacer-y: 0.5rem;
+    --bs-card-border-width: 10px;
+    --bs-card-border-color: #FB8500;/* var(--bs-border-color-translucent); */
+    --bs-card-border-radius: 0.375rem;
+    --bs-card-box-shadow: ;
+    --bs-card-inner-border-radius: calc(0.375rem - 1px);
+    --bs-card-cap-padding-y: 0.5rem;
+    --bs-card-cap-padding-x: 1rem;
+    --bs-card-cap-bg: rgba(0, 0, 0, 0.03);
+    --bs-card-cap-color: ;
+    --bs-card-height: ;
+    --bs-card-color: ;
+    --bs-card-bg: #FFB703;
+    --bs-card-img-overlay-padding: 1rem;
+    --bs-card-group-margin: 0.75rem;
+    position: relative;
+    display:inline-flex;
+    grid-row: span;
+    flex-direction:column;
+   /* min-width: 0; */
+    height: var(--bs-card-height);
+    word-wrap: break-word;
+    background-color: var(--bs-card-bg);
+    background-clip: border-box;
+    border: var(--bs-card-border-width) solid var(--bs-card-border-color);
+    border-radius: var(--bs-card-border-radius);
+    min-width: 21rem; /* inserido */
+    max-width: 36rem;
+  }
+  .col {
+    flex: 1 0 0%; 
+  }
+  .row {
+    
+    --bs-gutter-x: 1.5rem;
+    --bs-gutter-y: 0;
+    display: flex;
+    flex-wrap: wrap;
+   /* margin-top: calc(-1 * var(--bs-gutter-y));
+    margin-right: calc(-0.5 * var(--bs-gutter-x));
+    margin-left: calc(-0.5 * var(--bs-gutter-x)); */
+    margin: 1rem 0 1rem 0;
+    padding: 0 0 0 0;
+    
+  }
+  
